fixed z-index form_window

--- a/nuts/css/style_component_autocomplete.css
+++ b/nuts/css/style_component_autocomplete.css
@@ -1,4 +1,4 @@
-.ac_results {z-index: 2;}
+.ac_results {z-index: 1002;}
 .ac_results strong {font-weight: normal;}
 .ac_odd {background-color: #fff;}
 .ac_over {background-color: #34ABFA; color: white; cursor: pointer!important;}
